Fixed post spacing

--- a/src/components/PostFeed.scss
+++ b/src/components/PostFeed.scss
@@ -4,6 +4,7 @@
   .post {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 100px;
 
     figure {
       width: 46vw;
